# eudi-wallet-it-python

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  README-SATOSA.md  README.SATOSA.BACKEND.md  README.SATOSA.FRONTEND.md  README.SATOSA.md  README.md  docker-compose.yml  genindex.html  html_linting.sh  index.html  linting.sh  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
docs/: JWT_OPS.md  MODELS.md  OPENID4VCI-SATOSA-FRONTEND.md  OPENID4VP-SATOSA-BACKEND.md  SD-JWT.md  STORAGE.md  TRUST.md  conf.py  index.rst
example/: .env.example  README.Wordpress.md  README.md  docker-compose.yml  docker-prepare.sh  eudi_wallet_python_backend.yml  pyeudiw_backend.yml
integration_test/: cross_device_integration_test.py  same_device_integration_test.py  same_device_integration_test_duckle.py  user_denies_end_to_end_test.py
oldies/: _test_trust_evaluation_helper.py  trust_chain.py  x509_lost_n_found.py
pyeudiw_integration_test/: README.md  cross_device_integration_test.py  same_device_integration_test.py  same_device_integration_test_duckle.py  user_denies_end_to_end_test.py
source/: modules.html  pyeudiw.federation.html  pyeudiw.federation.schemas.html  pyeudiw.federation.trust_chain.html  pyeudiw.html  pyeudiw.jwk.html  pyeudiw.jwk.schemas.html  pyeudiw.jwt.html  pyeudiw.oauth2.dpop.html  pyeudiw.oauth2.html  pyeudiw.oauth2.par.html  pyeudiw.openid4vp.html  pyeudiw.openid4vp.presentation_submission.html  pyeudiw.openid4vp.schemas.html  pyeudiw.presentation_definition.html  pyeudiw.tools.html  (+11 more)
(+624 files in other folders)
