[tool.poetry]
name = "pyeudiw"
version = "0.1.0"  # Replace with the actual version from your __init__.py
description = "Python toolchain for building an OpenID4VP RP with a SATOSA backend compliant to the Italian Wallet Solution."
authors = ["Giuseppe De Marco <demarcog83@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/italia/eudi-wallet-it-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
cryptojwt = ">=1.9,<1.10"
pydantic = ">=2.10,<2.11"
pyqrcode = ">=1.2,<1.3"
pem = ">=23.1,<23.2"

[tool.poetry.extras]
satosa = [
    "Pillow>=10.0.0,<10.1",
    "device_detector>=5.0,<6",
    "satosa>=8.4,<8.6",
    "jinja2>=3.0,<4",
    "pymongo>=4.4.1,<4.5",
    "requests>=2.2,<2.4",
    {url = "git+https://github.com/peppelinux/pyMDOC-CBOR.git", name = "pymdoccbor"}
]
federation = [
    "asyncio>=4,<4.1",
    "aiohttp>=3.8,<3.9"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
